--- a/Corte1/Corte1.csproj
+++ b/Corte1/Corte1.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="models\Operacion.cs" />
     <Compile Include="models\Persona.cs" />
     <Compile Include="models\Registro.cs" />
     <Compile Include="Program.cs" />
